--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
+    "apexcharts": "^4.7.0",
     "chart.js": "^4.4.9",
     "cloudinary": "^2.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.6.0",
     "ionicons": "^7.0.0",
     "multer": "^1.4.5-lts.2",
+    "ng-apexcharts": "^1.15.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "streamifier": "^0.1.1",
